# defcon-nn-workshop

./: readme.md
full/: .env.example  Makefile  docker-compose.yml  manage.py  pyproject.toml
full/docker/app/: Dockerfile
full/yourwall/: asgi.py  settings.py  urls.py  wsgi.py
