[tool.poetry]
name = "YourWall"
version = "0.1.0"
description = ""
authors = ["Aleksey Ryabchikov <cyberxx@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"
django-environ = "^0.4.5"
django-cors-headers = "^2.5"
drf-yasg = "^1.14"
djangorestframework = "^3.11.0"
djangorestframework-jwt = "^1.11"
djangorestframework-recaptcha = "^0.2"
psycopg2 = "^2.7"
faker = "^2.0"
Pillow = "^6.0"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-django = "^3.8"
black = "=19.3b0"
isort = "^4.3"
pylint = "^2.2"
mypy = "^0.720"

[build-system]
requires = ["poetry==0.12.10"]
build-backend = "poetry.masonry.api"
